# plex-music-import-ratings

./: .gitignore  README.md  get_token.py  get_token_2FA.py  import_ratings.py  pyproject.toml  requirements.txt  update_playlist_ratings.py
.github/workflows/: pylint.yml
