[tool.poetry]
name = "plex-music-import-ratings"
version = "1.0.1"
description = "Import Music (iTunes) ratings to a Plex Music library"
authors = ["Kyle <kyle@fkylewright.com>"]
readme = "README.md"
packages = [{include = "plex_music_import_ratings"}]

[tool.poetry.dependencies]
python = "^3.11"
libpytunes = {git = "ssh://git@github.com/liamks/libpytunes.git"}
plexapi = "^4.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
